--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "pipe": "git://github.com/angular/pipe#assert",
-    "gulp-connect": "~1.0.5"
+    "gulp-connect": "~1.0.5",
+    "jquery": "~2.1.0"
   },
   "scripts": {
     "test": "karma start --single-run"
