--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "di": "~2.0.0-pre-2",
-    "assert": "git://github.com/vojtajina/assert#dist",
+    "assert": "git://github.com/angular/assert#dist",
     "weakmap": "~0.0.6"
   },
   "devDependencies": {
