--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "url": "https://github.com/angular/templating/issues"
   },
   "dependencies": {
-    "di": "~2.0.0-pre-4",
+    "di": "~2.0.0-pre-5",
     "weakmap": "~0.0.6"
   },
   "devDependencies": {
-    "pipe": "git://github.com/angular/pipe",
+    "pipe": "angular/pipe",
     "gulp-connect": "~1.0.5"
   },
   "scripts": {
