--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "url": "https://github.com/angular/templating/issues"
   },
   "dependencies": {
-    "di": "~2.0.0-pre-5",
-    "weakmap": "~0.0.6"
+    "di": "~2.0.0-pre-5"
   },
   "devDependencies": {
     "pipe": "angular/pipe",
