chore: use fork of Traceur
This fork contains fix for setters (https://github.com/google/traceur-compiler/pull/919) and also `pureES6` option to compile ES6+ into ES6.

WARNING:
At this point, we only generate shrinkwrap for dependencies (not devDependencies). I manually added a shrinkwrap for `gulp-traceur` and `karma-traceur-preprocessor` so that they both use the traceur fork.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "di": "~2.0.0-pre-5",
     "expressionist": "git://github.com/angular/expressionist.js#dist",
-    "watchtower": "git://github.com/angular/watchtower.js#dist"
+    "watchtower": "git://github.com/angular/watchtower.js#dist",
+    "traceur": "git://github.com/vojtajina/traceur-compiler#es6-plus-to-pure-es6"
   },
   "devDependencies": {
     "assert": "git://github.com/angular/assert#dist",
