chore: use deps from sources (di, rtts-assert)

--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
   },
   "dependencies": {
     "di": "~2.0.0-pre-6",
-    "expressionist": "git://github.com/angular/expressionist.js#rename-assert",
-    "watchtower": "git://github.com/angular/watchtower.js#dist",
-    "traceur": "git://github.com/vojtajina/traceur-compiler#es6-plus-to-pure-es6"
+    "expressionist": "angular/expressionist.js#deps-from-source",
+    "watchtower": "angular/watchtower.js#set-up-assert",
+    "traceur": "vojtajina/traceur-compiler#add-es6-pure-transformer-dist"
   },
   "devDependencies": {
-    "rtts-assert": "git://github.com/angular/assert#dist-rename",
+    "rtts-assert": "angular/assert",
     "clientify": "git://github.com/vojtajina/clientify#shrinkwrap",
     "gulp": "^3.5.6",
     "gulp-connect": "~1.0.5",
-    "gulp-traceur": "^0.3.0",
+    "gulp-traceur": "vojtajina/gulp-traceur#traceur-as-peer",
     "karma": "^0.12.1",
     "karma-chrome-launcher": "^0.1.2",
     "karma-jasmine": "^0.2.2",
     "karma-requirejs": "^0.2.1",
     "karma-sauce-launcher": "^0.2.3",
-    "karma-traceur-preprocessor": "^0.2.2",
-    "pipe": "git://github.com/angular/pipe#remove-transitive-deps",
+    "karma-traceur-preprocessor": "vojtajina/karma-traceur-preprocessor#traceur-as-peer",
+    "pipe": "angular/pipe#remove-transitive-deps",
     "requirejs": "^2.1.11",
     "through2": "^0.4.1",
     "gulp-util": "~2.2.14",
