--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "di": "~2.0.0-pre-6",
     "expressionist": "angular/expressionist.js",
     "watchtower": "angular/watchtower.js",
+    "zone.js": "angular/zone.js",
     "traceur": "vojtajina/traceur-compiler#add-es6-pure-transformer-dist"
   },
   "devDependencies": {
