--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma-sauce-launcher": "^0.2.3",
     "karma-traceur-preprocessor": "vojtajina/karma-traceur-preprocessor#traceur-as-peer",
     "pipe": "angular/pipe#remove-transitive-deps",
+    "protractor": "^0.21.0",
     "requirejs": "^2.1.11",
     "through2": "^0.4.1",
     "gulp-util": "~2.2.14",
